repos/infra/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-template
spec:
  selector:
    app: svc-template
  ports:
    - name: http
      port: 80
      targetPort: 4000
  type: ClusterIP
